Changed API calls to HTTPS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Weather App</title>
-    <link rel="icon" type="image/jpg" href="" />
+    <link rel="icon" type="image/png" href="" />
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
