Favicon has a default image to show before the API call is complete

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Weather App</title>
-    <link rel="icon" type="image/png" href="" />
+    <link rel="icon" type="image/png" href="https://openweathermap.org/img/wn/01d@4x.png" />
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
